cncProd/force-app/main/default/objects/MB_SA_Spec__c/MB_SA_Spec__c.object-meta.xml
<CustomObject>
    <label>MB SA Spec</label>
    <nameField>
        <displayFormat>MBSAS-{000000}</displayFormat>
        <label>MB SA Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MB SA Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>