cncProd/force-app/main/default/objects/MB_SA_Spec__c/fields/MB_SA_Spec_ID__c.field-meta.xml
<CustomField>
    <fullName>MB_SA_Spec_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>MB SA Spec ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>