cncProd/force-app/main/default/objects/MB_SA_Spec__c/fields/MB_Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>MB_Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MB Sales Agreement</label>
    <referenceTo>MB_Sales_Agreement__c</referenceTo>
    <relationshipLabel>MB SA Specs</relationshipLabel>
    <relationshipName>MB_SA_Specs</relationshipName>
    <type>Lookup</type>
</CustomField>