cncProd/force-app/main/default/objects/MB_SA_Spec__c/fields/OptKey__c.field-meta.xml
<CustomField>
    <fullName>OptKey__c</fullName>
    <label>OptKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>