cncProd/force-app/main/default/objects/MB_SA_Spec__c/fields/OType__c.field-meta.xml
<CustomField>
    <fullName>OType__c</fullName>
    <label>OType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MB_Option_Type</valueSetName>
    </valueSet>
</CustomField>